Refactor : inputNumberOfUser method refactor
예외 사항 구현